Fix #452 by limiting the width of comments and adding a scrollbar

--- a/forums/static/forums/css/forum.css
+++ b/forums/static/forums/css/forum.css
@@ -261,8 +261,13 @@ body {
 }
 
 .comment-text {
+  max-width: 100%;
   clear: both;
   padding: 1em 0;
+}
+
+.comment-text pre {
+  overflow: scroll;
 }
 
 /*
